# ipc_messaging

./: CMakeLists.txt  README.md  host_process.cpp  messaging.h  remote_process.cpp
